--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,3 +2,12 @@
   font-family: "Music";
   src: url("/fonts/Leland/Leland.otf")
 }
+* {
+  box-sizing: border-box
+}
+body, html {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
